--- a/index.html
+++ b/index.html
@@ -386,13 +386,14 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn btn-secondary"
+              class="btn-redi"
+              id="btnContinuar"
               data-bs-dismiss="modal"
             >
-              Cancelar
+              CONTINUAR
             </button>
-            <button type="button" class="btn btn-primary" id="btnContinuar">
-              Continuar
+            <button type="button" class="btn-canc" data-bs-dismiss="modal">
+              CANCELAR
             </button>
           </div>
         </div>
