--- a/index.html
+++ b/index.html
@@ -193,25 +193,28 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
+                      src="https://m.media-amazon.com/images/I/414mRY17XiL._SS135_.jpg"
                       alt="Perro y comida"
                       class="d-block"
                     />
                   </div>
                 </div>
               </div>
-              <h3>Llena sus platos de amor</h3>
+              <h3>Llena sus platos de mucho amor</h3>
               <p>
                 Cada croqueta es un paso hacia una vida más feliz para nuestros
                 peluditos. Ayúdanos a llenar sus bowls y a darles la energía que
                 necesitan para jugar y explorar
               </p>
-              <a
-                href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
-                class="btn btn-primary"
-                role="button"
-                >QUIERO DONAR</a
+              <button
+                type="button"
+                class="btn btn-primary btn-donar"
+                data-link="https://www.amazon.com.mx/hz/wishlist/ls/G8KNFI9Z64A4?ref_=wl_share"
+                data-bs-toggle="modal"
+                data-bs-target="#donarModal"
               >
+                QUIERO DONAR
+              </button>
             </div>
           </div>
           <div class="col-md-3">
@@ -234,7 +237,7 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
+                      src="https://m.media-amazon.com/images/I/414mRY17XiL._SS135_.jpg"
                       alt="Perro y comida"
                       class="d-block"
                     />
@@ -247,12 +250,15 @@
                 felicidad y podemos mejorar la calidad de vida de perros y gatos
                 en espera de un hogar.
               </p>
-              <a
-                href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
-                class="btn btn-primary"
-                role="button"
-                >QUIERO DONAR</a
+              <button
+                type="button"
+                class="btn btn-primary btn-donar"
+                data-link="https://www.amazon.com.mx/hz/wishlist/ls/3KWPKZSBQK12H?ref_=wl_share"
+                data-bs-toggle="modal"
+                data-bs-target="#donarModal"
               >
+                QUIERO DONAR
+              </button>
             </div>
           </div>
           <div class="col-md-3">
@@ -275,25 +281,28 @@
                   </div>
                   <div class="carousel-item">
                     <img
-                      src="https://imgs.search.brave.com/CbdBocHE9nDiZvaXrA58njZIyRwf9rftHxA3NUykaO4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcuZnJlZXBpay5jb20vZm90by1ncmF0aXMvYWNjZXNvcmlvcy1tYXNjb3Rhcy1jb25jZXB0by1uYXR1cmFsZXphLW11ZXJ0YS1jb21pZGEtc2VjYS1mb3JtYS1odWVzb18yMy0yMTQ4OTQ5NTcxLmpwZz9zaXplPTYyNiZleHQ9anBn"
+                      src="https://m.media-amazon.com/images/I/414mRY17XiL._SS135_.jpg"
                       alt="Perro y comida"
                       class="d-block"
                     />
                   </div>
                 </div>
               </div>
-              <h3>Cuídalos como se merecen</h3>
+              <h3>Cuídalos como ellos se merecen</h3>
               <p>
                 Un baño limpio y productos de calidad mejoran la salud y el
                 bienestar de nuestros amigos peludos. Ayúdanos a brindarles los
                 cuidados que se merecen
               </p>
-              <a
-                href="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
-                class="btn btn-primary"
-                role="button"
-                >QUIERO DONAR</a
+              <button
+                type="button"
+                class="btn btn-primary btn-donar"
+                data-link="https://www.amazon.com.mx/hz/wishlist/ls/W2V9C1VLPY3R?ref_=wl_share"
+                data-bs-toggle="modal"
+                data-bs-target="#donarModal"
               >
+                QUIERO DONAR
+              </button>
             </div>
           </div>
           <div class="col-md-3">
@@ -332,7 +341,7 @@
               <button
                 type="button"
                 class="btn btn-primary btn-donar"
-                data-link="https://www.amazon.com.mx/hz/wishlist/ls/18JKG74LSFCCX?ref_=wl_share"
+                data-link="https://www.amazon.com.mx/hz/wishlist/ls/36ZR8YVTWURYK?ref_=wl_share"
                 data-bs-toggle="modal"
                 data-bs-target="#donarModal"
               >
@@ -355,8 +364,35 @@
           animales rescatados.
         </p>
       </div>
+      
       <hr class="my-5" />
     </section>
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="cfinal">
+        <div class="carousel-item active" >
+          <img src="./imagen1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagen2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./imagen3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <!-- Modal -->
     <div
