--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">LinkArt</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+              Dejando Huellas
+            </h5>
             <button
               type="button"
               class="btn-close"
@@ -138,10 +140,12 @@
         <h1 class="mb-4">
           Tu ayuda lleva esperanza a quienes más lo necesitan.
         </h1>
-        <p class="mb-4">
-          Cada artículo donado significa días más cálidos, comidas más
-          nutritivas y cuidados esenciales para nuestros rescatados.<br />
-          ¡Sé parte del cambio que ellos necesitan!
+        <p class="mb-4 text-center">
+          Con solo unos clics, puedes ayudarnos a brindar los mejores cuidados a
+          nuestros peludos amigos.<br />
+          Hemos creado una lista de deseos en Amazon con todos los artículos que
+          necesitamos para mantener nuestro refugio limpio, cómodo y lleno de
+          amor.
         </p>
         <a href="#lista" class="btnDona">AYÚDANOS CON TU DONACIÓN</a>
       </div>
@@ -155,25 +159,32 @@
         <h2 class="mb-4">
           ¿Quieres hacer una gran diferencia en la vida de un animal?
         </h2>
-        <h3 class="mb-3">¡Donar es más fácil que nunca!</h3>
-        <p class="mb-4">
-          Con solo unos clics, puedes ayudarnos a brindar los mejores cuidados a
-          nuestros peludos amigos.<br />
-          Hemos creado una lista de deseos en Amazon con todos los artículos que
-          necesitamos para mantener nuestro refugio limpio, cómodo y lleno de
-          amor.
-        </p>
-        <p>
-          Si deseas donar clic en el botón <strong>"QUIERO DONAR"</strong>.
-          Serás redirigido directamente a nuestra lista de deseos de Amazon.<br />
-          <strong>Elige los artículos que deseas donar</strong>. Desde comida y
-          juguetes hasta productos de limpieza y suministros médicos,
-          encontrarás todo lo necesario para mejorar la vida de nuestros
-          animales.<br />
-          <strong>¡Realiza tu compra!</strong> Amazon se encargará de enviar los
-          artículos directamente a nuestro refugio.
-        </p>
-
+        <div style="display: flex; align-items: center">
+          <div style="flex: 1; padding: 10px">
+            <img
+              src="imagen1.jpg"
+              alt="Descripción de la imagen"
+              style="max-width: 100%; height: auto"
+            />
+          </div>
+          <div style="flex: 1; padding: 10px">
+            <h2 class="mb-3">¡Donar es más fácil que nunca!</h2>
+            <p>
+              1. Si deseas donar clic en el botón
+              <strong>"QUIERO DONAR"</strong>. Serás redirigido directamente a
+              nuestra lista de deseos de Amazon.<br />
+              2. <strong>Elige los artículos que deseas donar</strong>. Desde
+              comida y juguetes hasta productos de limpieza y suministros
+              médicos, encontrarás todo lo necesario para mejorar la vida de
+              nuestros animales.<br />
+              3. <strong>¡Realiza tu compra!</strong> Amazon se encargará de
+              enviar los artículos directamente a nuestro refugio.
+            </p>
+          </div>
+        </div>
+        <br />
+        <h2>Maneras de hacer la diferencia.</h2>
+        <br />
         <!--Empieza Tarjetas-->
         <div class="row">
           <div class="col-md-3">
@@ -196,7 +207,7 @@
                 data-bs-toggle="modal"
                 data-bs-target="#donarModal"
               >
-                QUIERO DONAR
+                Quiero donar
               </button>
             </div>
           </div>
@@ -220,7 +231,7 @@
                 data-bs-toggle="modal"
                 data-bs-target="#donarModal"
               >
-                QUIERO DONAR
+                Quiero donar
               </button>
             </div>
           </div>
@@ -244,7 +255,7 @@
                 data-bs-toggle="modal"
                 data-bs-target="#donarModal"
               >
-                QUIERO DONAR
+                Quiero donar
               </button>
             </div>
           </div>
@@ -268,27 +279,25 @@
                 data-bs-toggle="modal"
                 data-bs-target="#donarModal"
               >
-                QUIERO DONAR
+                Quiero donar
               </button>
             </div>
           </div>
         </div>
       </div>
     </section>
-
+    <br />
     <!--DONADORES-->
     <section class="historias-donadores">
       <div class="donadores">
-        <h2 class="mb-4">Gracias por tu apoyo</h2>
-        <h3 class="mb-3">conoce a nuestros donadores</h3>
-        <p class="mb-4">
+        <h2 class="mb-4">Gracias por tu apoyo.</h2>
+        <h3 class="mb-3">Conoce a nuestros donadores</h3>
+        <p class="textofinal">
           Cada donación cuenta y queremos agradecer a quienes ya nos han
           apoyado. Conoce a nuestros héroes y su impacto en la vida de los
           animales rescatados.
         </p>
       </div>
-
-      <hr class="my-5" />
     </section>
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
@@ -315,7 +324,7 @@
       </div>
       <div class="cfinal">
         <div class="carousel-item active">
-          <img src="./imagen1.jpg" class="d-block w-100" alt="..." />
+          <img src="./foto7.jpg" class="d-block w-100" alt="..." />
         </div>
         <div class="carousel-item">
           <img src="./imagen2.jpg" class="d-block w-100" alt="..." />
@@ -344,11 +353,14 @@
       </button>
     </div>
     <div class="gallery">
-      <img src="foto1.jpg" alt="Imagen 1">
-      <img src="foto2.jpg" alt="Imagen 2">
-      <img src="foto3.jpg" alt="Imagen 3">
-      <img src="foto4.jpg" alt="Imagen 4">
-      <img src="foto5.jpg" alt="Imagen 5">
+      <img src="foto1.jpg" alt="Imagen 1" />
+      <img src="foto2.jpg" alt="Imagen 2" />
+      <img src="foto3.jpg" alt="Imagen 3" />
+      <img src="foto4.jpg" alt="Imagen 4" />
+      <img src="foto5.jpg" alt="Imagen 5" />
+      <img src="foto6.jpg" alt="Imagen 6" />
+      <img src="foto7.jpg" alt="Imagen 7" />
+      <img src="foto8.jpg" alt="Imagen 8" />
     </div>
     <!-- Modal -->
     <div
