--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       </div>
     </div>
     <hr class="my-5" />
-
+    <button id="scrollToTop">↑</button>
     <footer style="background-color: #cff3ff">
       <div class="container text-center">
         <div class="row align-items-center">
@@ -467,6 +467,16 @@
           };
         });
       });
+      
+      const scrollToTopButton = document.getElementById("scrollToTop");
+
+        window.addEventListener("scroll", () => {
+          scrollToTopButton.style.display = window.scrollY > 200 ? "block" : "none";
+        });
+
+        scrollToTopButton.addEventListener("click", () => {
+          window.scrollTo({ top: 0, behavior: "smooth" });
+        });
     </script>
   </body>
 </html>
