--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
           <div class="modal-footer">
             <button
               type="button"
-              class="btn-redi"
+              class="btn-canc"
               id="btnContinuar"
               data-bs-dismiss="modal"
             >
-              CONTINUAR
-            </button>
-            <button type="button" class="btn-canc" data-bs-dismiss="modal">
               CANCELAR
+            </button>
+            <button type="button" class="btn-redi" data-bs-dismiss="modal">
+              CONTINUAR
             </button>
           </div>
         </div>
