--- a/index.html
+++ b/index.html
@@ -149,13 +149,15 @@
     <section class="hero">
       <div class="hero-especie">
         <h1 class="mb-4">
-          Tu ayuda lleva esperanza a quienes más lo necesitan.
+          Tu ayuda lleva esperanza <br>
+          a quienes más lo necesita
         </h1>
-        <p class="mb-4 text-center">
-          Con solo unos clics, puedes ayudarnos a brindar los mejores cuidados a
-          nuestros peludos amigos.<br />
-          Hemos creado una lista de deseos en Amazon con todos los artículos que
-          necesitamos para mantener nuestro refugio limpio, cómodo y lleno de
+        <p class="mb-4">
+          Con solo unos clics, puedes ayudarnos a brindar <br>
+          los mejores cuidados a nuestros peludos amigos.<br />
+          Hemos creado una lista de deseos en Amazon con <br>
+          todos los artículos que necesitamos para mantener <br>
+          nuestro refugio limpio, cómodo y lleno de <br>
           amor.
         </p>
         <a href="#lista" class="btnDona">AYÚDANOS CON TU DONACIÓN</a>
@@ -182,19 +184,20 @@
             <h2 class="mb-3">¡Donar es más fácil que nunca!</h2>
             <p>
               1. Si deseas donar clic en el botón
-              <strong>"QUIERO DONAR"</strong>. Serás redirigido directamente a
+              <strong>"QUIERO DONAR"</strong>. Serás dirigido directamente a
               nuestra lista de deseos de Amazon.<br />
               2. <strong>Elige los artículos que deseas donar</strong>. Desde
               comida y juguetes hasta productos de limpieza y suministros
               médicos, encontrarás todo lo necesario para mejorar la vida de
               nuestros animales.<br />
-              3. <strong>¡Realiza tu compra!</strong> Amazon se encargará de
+              4.  Desde tu cuenta Amazon <strong>¡Realiza tu compra!</strong>. <br>
+              3. <strong>Amazon se encargará</strong> de
               enviar los artículos directamente a nuestro refugio.
             </p>
           </div>
         </div>
         <br />
-        <h2>Maneras de hacer la diferencia.</h2>
+        <h2>Cuatro maneras de donar</h2>
         <br />
         <!--Empieza Tarjetas-->
         <div class="row">
@@ -205,7 +208,7 @@
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
-              <h3 class="titulotarjetas">Llena sus platos de mucho amor</h3>
+              <h3 class="titulotarjetas">Alimento</h3>
               <p class="textotarjetas">
                 Cada croqueta es un paso hacia una vida más feliz para nuestros
                 peluditos. Ayúdanos a llenar sus bowls y a darles la energía que
@@ -229,7 +232,7 @@
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
-              <h3 class="titulotarjetas">Haz que se sientan como en casa</h3>
+              <h3 class="titulotarjetas">Acesorios y juguetes</h3>
               <p class="textotarjetas">
                 Los accesorios también son esenciales para su comodidad,
                 felicidad y podemos mejorar la calidad de vida de perros y gatos
@@ -253,7 +256,7 @@
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
-              <h3 class="titulotarjetas">Cuídalos como ellos se merecen</h3>
+              <h3 class="titulotarjetas">Higiene</h3>
               <p class="textotarjetas">
                 Un baño limpio y productos de calidad mejoran la salud y el
                 bienestar de nuestros amigos peludos. Ayúdanos a brindarles los
@@ -277,7 +280,7 @@
                 alt="Perro pidiendo ayuda"
                 class="d-block"
               />
-              <h3 class="titulotarjetas">Un hogar limpio y feliz</h3>
+              <h3 class="titulotarjetas">Articulos de Limpieza</h3>
               <p class="textotarjetas">
                 Un ambiente limpio y seguro es fundamental para la salud de
                 nuestros animales. Con tu ayuda, podemos mantener nuestros
@@ -301,7 +304,7 @@
     <!--DONADORES-->
     <section class="historias-donadores">
       <div class="donadores">
-        <h2 class="mb-4">Gracias por tu apoyo.</h2>
+        <h2 class="mb-4">Gracias por tu apoyo</h2>
         <h3 class="mb-3">Conoce a nuestros donadores</h3>
         <p class="textofinal">
           Cada donación cuenta y queremos agradecer a quienes ya nos han
@@ -395,7 +398,7 @@
             ></button>
           </div>
           <div class="modal-body">
-            Estás a punto de ser redirigido a la página de Amazon para realizar
+            Estás a punto de ser dirigido a la página de Amazon para realizar
             tu donación. ¿Deseas continuar?
           </div>
           <div class="modal-footer">
