--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
               comida y juguetes hasta productos de limpieza y suministros
               médicos, encontrarás todo lo necesario para mejorar la vida de
               nuestros animales.<br />
-              4.  Desde tu cuenta Amazon <strong>¡Realiza tu compra!</strong>. <br>
-              3. <strong>Amazon se encargará</strong> de
+              3.  Desde tu cuenta Amazon <strong>¡Realiza tu compra!</strong>. <br>
+              4. <strong>Amazon se encargará</strong> de
               enviar los artículos directamente a nuestro refugio.
             </p>
           </div>
@@ -407,11 +407,11 @@
               class="btn-canc"
               data-bs-dismiss="modal"
             >
-              CANCELAR
+              Cancelar
             </button>
             <button type="button" class="btn-redi" data-bs-dismiss="modal" id="btnContinuar"
             >
-              CONTINUAR
+              Continuar
             </button>
           </div>
         </div>
