--- a/index.html
+++ b/index.html
@@ -494,12 +494,12 @@
           </div>
           <div class="col">
             <div class="col2">
-              <a class="links-footer" href="/index">Inicio</a>
-              <a class="links-footer" href="">Nosotros</a>
-              <a class="links-footer" href="">Donativos</a>
-              <a class="links-footer" href="">Reportar maltrato</a>
-              <a class="links-footer" href="">Eventos</a>
-              <a class="links-footer" href="">Contacto</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/">Inicio</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/#nosotros">Nosotros</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/donativos/">Donativos</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/#reportar">Reportar maltrato</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/#eventos">Eventos</a>
+              <a class="links-footer" href="https://dejandohuellascancun.org/#contacto">Contacto</a>
             </div>
           </div>
           <div class="col">
