--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     />
 
     <!-- Estilos propios -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./estilos.css" />
   </head>
 
   <body class="d-flex flex-column min-vh-100">
