--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dona ahora y ayúdanos a continuar nuestra labor de rescate y salvar a nuestros perros y gatos abandonados">
-    <title>Dejando Huellas por Cancun</title>
+    <meta name="description" content="Dona ahora y ayúdanos a continuar nuestra labor de rescate y salvar a nuestros perros y gatos en situación de calle. Juntos podemos construir un futuro mejor para los animales">
+    <meta name="keywords" content="Donación, Donaciones, Animales, Refugio, Ayudar, Croquetas, Gatos, Perros, Cancún, México">
+    <link rel = "canonical" href = "https://dejandohuellascancun.org/"/>
+    <title>Donaciones y ayuda para mascotas en Cancún</title>
 
     <link
       rel="icon"
